--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,14 +26,14 @@ jobs:
           docker build -t api-gateway ./api-gateway
 
       - name: Docker Login
-        if: secrets.DOCKER_USERNAME
-        run: |
+	if: ${{ secrets.DOCKER_USERNAME != '' && secrets.DOCKER_PASSWORD != '' }}
+  	run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ secrets.DOCKER_REGISTRY }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Tag and Push Docker Images
-        if: secrets.DOCKER_USERNAME
+        if: ${{ secrets.DOCKER_USERNAME != '' && secrets.DOCKER_PASSWORD != '' }}
         run: |
-          docker tag user-service ${{ secrets.DOCKER_REGISTRY }}/martin590/com-project1:user-service
+         docker tag user-service ${{ secrets.DOCKER_REGISTRY }}/martin590/com-project1:user-service
           docker push ${{ secrets.DOCKER_REGISTRY }}/martin590/com-project1:user-service
           
           docker tag quiz-service ${{ secrets.DOCKER_REGISTRY }}/martin590/com-project1:quiz-service
