--- a/quiz-platform/api-gateway/nginx.conf
+++ b/quiz-platform/api-gateway/nginx.conf
@@ -1,15 +1,20 @@
 server {
     listen 8080;
 
-    location /api/v1/auth {
-        proxy_pass http://user-service:5000;
+    location /users {
+        proxy_pass http://user-service:80;
     }
 
-    location /api/v1/quizzes {
-        proxy_pass http://quiz-service:5001;
+    location /quizzes {
+        proxy_pass http://quiz-service:80;
     }
 
-    location /api/v1/results {
-        proxy_pass http://result-service:5002;
+    location /results {
+        proxy_pass http://result-service:80;
+    }
+
+    location / {
+        return 200 '{"message":"api gateway working"}';
+        add_header Content-Type application/json;
     }
 }
